# tiny-teemo-etl

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose-db.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
app/: cli.py  main.py
app/api/v1/: api.py  router.py
app/api/v1/endpoints/: database.py  documents.py  etl.py  files.py  migrate.py  utilities.py
app/core/: config.py  constants.py
app/database/connectors/: base.py  mysql.py  postgres.py  sqlite.py
app/models/: schemas.py
app/services/: api_writer.py  db_reader.py  etl_logger.py  etl_runner.py  file_processor.py  file_writer.py  schema_mapper.py
app/utils/: db_connections.py  file_helpers.py
app/worker/: celery_app.py  job_store.py  tasks.py
static/: dashboard.html
tests/: conftest.py  test_connectors.py  test_db_connectors_network.py  test_etl.py  test_file_processor.py  test_migration.py  test_transformations.py
