[project]
name = "tinyteemo"
version = "0.2.0"
description = "A lightweight ETL system built with FastAPI + Celery"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pyarrow>=14.0.0",
    "psycopg2-binary>=2.9.0",
    "PyMySQL>=1.1.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    # Async task queue
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    # Celery monitoring
    "flower>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
dev   = "app.cli:dev"
start = "app.cli:start"
test  = "app.cli:test"
worker = "app.cli:worker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
